Bug 408753 - No favourite blending modes by default
Summary: No favourite blending modes by default
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 4.2.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-15 20:22 UTC by Tiar
Modified: 2019-06-17 08:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
default blending modes (223.00 KB, image/png)
2019-06-16 11:59 UTC, Halla Rempt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tiar 2019-06-15 20:22:02 UTC
SUMMARY
If you reset the configuration, there is no favourite blending modes.

STEPS TO REPRODUCE
1. Reset the configuration.
2. Open Krita 4.2.1.
3. Try to assign a different blending mode.

OBSERVED RESULT
Favourite blending modes are empty.

EXPECTED RESULT
There should be a list of favourite blending modes just like before.

SOFTWARE/OS VERSIONS
Qt Version: 5.12.3
Linux Mint

ADDITIONAL INFORMATION
I'm using appimage. In 4.1.7, there is a list of favourite blending modes available.
Comment 1 Ahab Greybeard 2019-06-15 20:43:12 UTC
The list of favourite blending modes is populated by you selecting blending modes from other categories and clicking the small box to the left of the mode name, to add (or remove) that blending mode to (from) the favourites list.

4.1.7 did have initial entries in the favourites category but that always seemed strange to me, because how could krita know what my favourite blending modes are? I assume that someone had decided that they were the 'most common and useful' blending modes.
Comment 2 Tiar 2019-06-15 21:32:50 UTC
There were always (or, always as far as I remember) favourite blending modes. The list is compiled mostly of blending modes that are the most widely available (for example SAI had those, Medibang or other programs, see here: https://medibangpaint.com/en/use/2016/07/medibang-paint-blending-mode-tutorial/ or here: https://cms-assets.tutsplus.com/uploads/users/1152/posts/25089/image/basic-guide-layer-modes.jpg). Most art tutorials are using those, too.

So I believe that was a way to make Krita less scary for newcomers. I, for example, never remember where "Normal" blending mode is located, so how beginners could not get lost in the list. Also for beginners right now it just looks like an empty category that exists for no reason...

Hence I believe it is a mistake, a bug that comes from either Reptorian's (who was working on adding new blending modes) or Boud's (who is/was generally working on resources) work.
Comment 3 Ahab Greybeard 2019-06-16 08:50:35 UTC
You make a good point about ease of use for a beginner (of which there seem to be many recently) and that didn't occur to me.
It may have been an oversight or it may have been a deliberate design decision.
I'll set this to Confirmed in agreement with you.
Comment 4 Halla Rempt 2019-06-16 11:57:52 UTC
Um... Both with my self-built binaries as with the appimage, if I rm -rf ~/.config/krita* and start either, I do have the default set of favourite blending modes available. If they don't show for you, something weird is up. The only think I can think of, possibly, is another translation issue, if you run Krita in Polish or something like that?
Comment 5 Halla Rempt 2019-06-16 11:59:18 UTC
Created attachment 120915 [details]
default blending modes

The terminal shows clearing the config, then starting the appimage, the popup the default favorite blending modes.
Comment 6 Ahab Greybeard 2019-06-16 13:51:57 UTC
This is strange:
I've just deleted the krita* configuration files and then tried running the old standard 4.1.7 appimage the 4.2.1 appimage and the latest 4.3.0 pre-alpha appimage.
4.1.7 shows that group of favourite blending modes but 4.2.1 and the latest 4.3.0 show an empty favourites group.
I have no additional langauges, just the appimages as downloaded.
It's a mystery.
Comment 7 Ahab Greybeard 2019-06-16 14:17:55 UTC
I've just repeated the process described in Comment 6 on a Windows 10 system with the 64-bit standalone versions of 4.1.7, 4.1.2 and the latest nightly build.
The result is the same, 4.1.7 has them, the newer versions do not.
Comment 8 Halla Rempt 2019-06-16 19:14:21 UTC
What's the locale of those systems?
Comment 9 Ahab Greybeard 2019-06-16 19:43:53 UTC
Linux Debian 9 Locale
-------------
LANG=en_GB.UTF-8
LANGUAGE=en_GB:en
LC_CTYPE="en_GB.UTF-8"
LC_NUMERIC="en_GB.UTF-8"
LC_TIME="en_GB.UTF-8"
LC_COLLATE="en_GB.UTF-8"
LC_MONETARY="en_GB.UTF-8"
LC_MESSAGES="en_GB.UTF-8"
LC_PAPER="en_GB.UTF-8"
LC_NAME="en_GB.UTF-8"
LC_ADDRESS="en_GB.UTF-8"
LC_TELEPHONE="en_GB.UTF-8"
LC_MEASUREMENT="en_GB.UTF-8"
LC_IDENTIFICATION="en_GB.UTF-8"
LC_ALL=


Windows 10 Locale
--------------
Home Location: United Kingdom
Currentlanguage English (United Kingdom)
Format: English(United States) [Match Windows display language(recommended)]
Comment 10 Halla Rempt 2019-06-17 07:32:10 UTC
Okay, so apparently it isn't the locale, since I set that to yours, cleaned away the config and tried with the appimage, and I had my favorite blending modes. I'll dig into the code.
Comment 11 Halla Rempt 2019-06-17 07:47:08 UTC
Git commit 78576ea028120e8e30eb4c145b88711713aec059 by Boudewijn Rempt.
Committed on 17/06/2019 at 07:43.
Pushed by rempt into branch 'master'.

Set the defaults for the favorite composite ops

This got lost in

commit 0f736a3d2e36abc52db52a4b2c6c324dc5ca31cd
Author: Dmitry Kazakov <dimula73@gmail.com>
Date:   Wed Mar 27 19:50:08 2019 +0300

    Clean-up system-wide default kritarc settings

    These defaults are set in KisConfig. The patch fixes Instant
    Preview being enabled on all the user systems by default. It
    shouldn't be.
Related: bug 399190

However, the favorite composite ops were not set in KisConfig, so
they were empty. Unless you happened to have a an old install dir
which had a kritarc which still contained the defaults, so they
would still be present.

M  +2    -1    libs/ui/kis_config.cc

https://invent.kde.org/kde/krita/commit/78576ea028120e8e30eb4c145b88711713aec059
Comment 12 Halla Rempt 2019-06-17 08:18:06 UTC
Git commit 489ca961ce41187a264fb2a5123ab1c933d36efa by Boudewijn Rempt.
Committed on 17/06/2019 at 08:17.
Pushed by rempt into branch 'krita/4.2'.

Set the defaults for the favorite composite ops

This got lost in

commit 0f736a3d2e36abc52db52a4b2c6c324dc5ca31cd
Author: Dmitry Kazakov <dimula73@gmail.com>
Date:   Wed Mar 27 19:50:08 2019 +0300

    Clean-up system-wide default kritarc settings

    These defaults are set in KisConfig. The patch fixes Instant
    Preview being enabled on all the user systems by default. It
    shouldn't be.
Related: bug 399190

However, the favorite composite ops were not set in KisConfig, so
they were empty. Unless you happened to have a an old install dir
which had a kritarc which still contained the defaults, so they
would still be present.

M  +2    -1    libs/ui/kis_config.cc

https://invent.kde.org/kde/krita/commit/489ca961ce41187a264fb2a5123ab1c933d36efa