Set the defaults for the favorite composite ops

This got lost in

commit 0f736a3d2e36abc52db52a4b2c6c324dc5ca31cd
Author: Dmitry Kazakov <dimula73@gmail.com>
Date:   Wed Mar 27 19:50:08 2019 +0300

    Clean-up system-wide default kritarc settings

    These defaults are set in KisConfig. The patch fixes Instant
    Preview being enabled on all the user systems by default. It
    shouldn't be.

    CCBUG:399190

However, the favorite composite ops were not set in KisConfig, so
they were empty. Unless you happened to have a an old install dir
which had a kritarc which still contained the defaults, so they
would still be present.

BUG:408753