libs/ui/kis_config.cc
@@ -1346,7 +1346,8 @@ void KisConfig::setFullscreenMode(const bool value) const
 
 QStringList KisConfig::favoriteCompositeOps(bool defaultValue) const
 {
-    return (defaultValue ? QStringList() : m_cfg.readEntry("favoriteCompositeOps", QStringList()));
+    return (defaultValue ? QStringList() : m_cfg.readEntry("favoriteCompositeOps",
+                                                           QString("normal,erase,multiply,burn,darken,add,dodge,screen,overlay,soft_light_svg,luminize,lighten,saturation,color,divide").split(','));
 }
 
 void KisConfig::setFavoriteCompositeOps(const QStringList& compositeOps) const
